# magic-scrape

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/magic_scrape/: cli.py  config.py  extract.py  mock.py  scrape.py
tests/: cli_test.py  conftest.py  scrape_test.py
tests/data/: fixtures.py
tests/helpers/: data.py
