[project]
name = "magic-scrape"
dynamic = ["version"]
description = "Automatic extraction of webpage info using OpenAI Functions validation to store a sitewide config in a web scraper."
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
dependencies = [
    "pydantic>=2.1.1",
    "pydantic-settings>=2.0.2",
    "defopt>=6.4.0",
    "httpx>=0.24.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
magicscrape = "magic_scrape.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/magic_scrape/__init__.py" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]

[tool.isort]
known_first_party = ["magic_scrape"]
